# Minecraft-Clone

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/src/Engine/: Application.cpp  Application.h
Engine/src/Engine/Core/: Core.h  Log.cpp  Log.h
Engine/src/Engine/Events/: Events.h
Engine/src/Engine/Input/: Input.cpp  Input.h
Engine/src/Engine/Layer/: Layer.h
Engine/src/Engine/Renderer/: Buffers.cpp  Buffers.h  Camera.cpp  Camera.h  ChunkRenderComponent.cpp  ChunkRenderComponent.h  Mesh.cpp  Mesh.h  RenderQueue.cpp  RenderQueue.h  Renderer.cpp  Renderer.h  RendererCommands.cpp  RendererCommands.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  TextureAtlas.cpp  TextureAtlas.h  WorldRenderer.cpp  WorldRenderer.h
Engine/src/Engine/Renderer/Shaders/: Basic.frag  Basic.vert
Engine/src/Engine/Window/: Window.cpp  Window.h
Engine/src/Engine/World/: ChunkMesher.cpp  ChunkMesher.h
Game/: CMakeLists.txt
Game/src/: ApplicationLayer.cpp  ApplicationLayer.h  EntryPoint.cpp  GameLayer.cpp  GameLayer.h
Game/src/WorldGeneration/: Block.h  Chunk.cpp  Chunk.h  ChunkMesher.cpp  ChunkMesher.h  ChunkRenderer.cpp  ChunkRenderer.h  TextureAtlas.cpp  TextureAtlas.h  ThreadSafeQueue.h  World.cpp  World.h  WorldGenerator.cpp  WorldGenerator.h
Scripts/: Build-Project.bat
